src/test/ui/tuple-struct-fields/test.stderr
error: expected one of `)` or `,`, found `(`
  --> $DIR/test.rs:14:26
   |
LL |     struct S2(pub((foo)) ());
   |                          ^ expected one of `)` or `,` here

error[E0412]: cannot find type `foo` in this scope
  --> $DIR/test.rs:14:20
   |
LL |     struct S2(pub((foo)) ());
   |                    ^^^ not found in this scope

error[E0601]: `main` function not found in crate `test`
   |
   = note: consider adding a `main` function to `$DIR/test.rs`

error: aborting due to 3 previous errors

Some errors occurred: E0412, E0601.
For more information about an error, try `rustc --explain E0412`.
